@@ -159,6 +159,8 @@ function displayfile()
    "InactiveLimit=" + document.config.inactive_limit.value + "<br>" +
    "MinJobAge=" + document.config.min_job_age.value + "<br>" +
    "KillWait=" + document.config.kill_wait.value + "<br>" +
+   "#UnkillableStepProgram= <br>" +
+   "#UnkillableStepTimeout= <br>" +
    "Waittime=" + document.config.wait_time.value + "<br>" +
    "# <br>" +
    "# SCHEDULING<br>" +
