@@ -894,7 +894,7 @@ processes.  The program will be run as the same user as the slurmd (usually
 
 .TP
 \fBUnkillableStepTimeout\fR
-The lenght of time, in seconds, that SLURM will wait before deciding that
+The length of time, in seconds, that SLURM will wait before deciding that
 processes in a job step are unkillable (after they have been signalled with
 SIGKILL).  The default timeout value is 60 seconds.
 
